--- a/components/userpanel-4/userpanel_desk.css
+++ b/components/userpanel-4/userpanel_desk.css
@@ -1,15 +1,14 @@
 
-
 .userpanel_desk .back {
 	margin: 0 0 0 10px;
-	font: normal 12px tahoma;
+	font: normal 12px DefaultFont;
 	color: rgb(76, 147, 199);
 	border-bottom: 1px solid rgb(76, 147, 199);
 	padding: 0 0 4px 0;
 }
 
 .userpanel_desk {
-	display: inline-block;
+	display: inline-blocke;
 	border-width: 0 1px 0 0;
 	width: 100%;
 	background-color: white;
@@ -32,7 +31,7 @@
 	height: 338px;
 }
 .userpanel_desk_management > .container > div > .head {
-	font: bold 18px tahoma;
+	font: bold 18px DefaultFont;
 	text-shadow: 1px 1px white;
 	text-align: right;
 	margin: 15px 30px 0 0;
