--- a/components/userpanel-4/userpanel_menu.css
+++ b/components/userpanel-4/userpanel_menu.css
@@ -3,7 +3,7 @@
 	display: inline-block;
 	width: 100%;
 	direction: rtl;
-	background-color: white;
+	/* background-color: white; */
 	margin-bottom: 20px;
 	border-radius: 4px;
 	opacity: 0.0;
