--- a/components/catcustomfield-1/catcustomfield_mg_form.css
+++ b/components/catcustomfield-1/catcustomfield_mg_form.css
@@ -1,6 +1,6 @@
 
 .catcustomfield_mg_form {
-
+	margin-bottom: 30px;
 }
 
 .catcustomfield_mg_form .head {
@@ -15,7 +15,7 @@
 .catcustomfield_mg_form .prompt {
 	display: none;
 }
-.catcustomfield_mg_form .prompt span:nth-child(2) {
+.catcustomfield_mg_form .prompt {
 	color: #e80000;
 	list-style-type: circle;
 }
