--- a/components/main-3/main-index.init.css
+++ b/components/main-3/main-index.init.css
@@ -59,9 +59,9 @@ input[type=button] {
 	margin: 1px;
 }
 input[type=checkbox] {
-	position: relative;
-	top: 3px;
-	left: 5px;
+	/* position: relative; */
+	/* top: 3px; */
+	/* left: 5px; */
 }
 select:hover,
 input[type=text]:hover,
