--- a/components/faq-1/faq_mg_form.css
+++ b/components/faq-1/faq_mg_form.css
@@ -1,23 +1,20 @@
 
 .faq_mg_form {
-	width: 100%;
-	direction: rtl;
-}
 
-#faq_mg_form_name_1 {
-	width: 100%;
-	margin: 10px 0;
-	font-size: 14px;
-	line-height: 24px !important;
 }
-#faq_mg_form_text_2 {
-	width: 100%;
+.faq_mg_form .lmfe_tnit {
+	width: 160px;
+	padding-top: 13px;
+}
+#lmfe_formda75cd_name {
+	vertical-align: top;
+	width: calc( 100% - 250px );
+	font-size: 14px;
+}
+#lmfe_formda75cd_text {
+	vertical-align: top;
+	width: calc( 100% - 250px );
 	height: 220px;
-	margin: 10px 0;
 	font-size: 14px;
-	line-height: 24px !important;
-}
-#faq_mg_form_submit_3 {
-	margin: 10px 0;
 }
 
