--- a/components/main.admin-3/admin_changepassword.css
+++ b/components/main.admin-3/admin_changepassword.css
@@ -17,5 +17,5 @@
     padding: 40px 0 42px 0;
 }
 .admin_changepassword .lmfe_inDiv.submit input {
-	position: relative; right: 68px;	
+	margin-right: 70px;	
 }
