--- a/components/listmaker_form-1/listmaker_form_element_this_head.css
+++ b/components/listmaker_form-1/listmaker_form_element_this_head.css
@@ -1,7 +1,8 @@
 
 .lmf_head {
 	border-bottom: 1px dashed #ccc;
-	padding: 10px;
+	padding: 10px 10px 20px;
 	font-size: 18px;
 	font-weight: bold;
+	margin-bottom: 25px;
 }
