--- a/components/cat-3/cat_mg.css
+++ b/components/cat-3/cat_mg.css
@@ -186,7 +186,12 @@
 }
 
 
-
+#cat_form_management form > input[type=color] {
+	height: 36px;
+    width: 20px;
+    position: relative;
+    vertical-align: bottom;
+}
 
 
 
