--- a/components/main-3/bootstrap-fix.skipfix.css
+++ b/components/main-3/bootstrap-fix.skipfix.css
@@ -22,6 +22,6 @@ legend {
 	display: inline-block;
 }
 .checkbox {
-	margin: 0px;
-	display: inline-block;
+	/* margin: 0px; */
+	/* display: inline-block; */
 }
