--- a/components/main-3/bootstrap-fix.skipfix.css
+++ b/components/main-3/bootstrap-fix.skipfix.css
@@ -25,3 +25,12 @@ legend {
 	/* margin: 0px; */
 	/* display: inline-block; */
 }
+.catcustomfield_formload .checkbox_c label input.ccf_element.checkbox {
+	display: inline-block;
+}
+
+
+
+
+
+
