--- a/components/catcustomfield-2/catcustomfield_formload.css
+++ b/components/catcustomfield-2/catcustomfield_formload.css
@@ -120,6 +120,7 @@
 	margin: 0 0 0 10px;
     display: inline-block;
     padding: 0 0 0 10px;
+    min-width: 140px;
 }
 .catcustomfield_formload > .ccffe_thisCat .checkbox_c > label:active {
 
