--- a/components/userregisterverify-1/userregisterverify_form.css
+++ b/components/userregisterverify-1/userregisterverify_form.css
@@ -1,12 +1,12 @@
 
-#userloginverify_form {
+#userregisterverify_form {
 	margin: auto;
 	display: block;
 	margin-right: 8%;
 	margin-bottom: 8%;
 	padding: 20px 0 20px 0;
 }
-#userloginverify_form input[type=text] {
+#userregisterverify_form input[type=text] {
 	font-family: monospace,'sans-serif' !important;
 	margin-bottom: 18px;
 	font-size: 16px;
@@ -16,39 +16,39 @@
 	direction: ltr;
 	text-align: left;
 }
-#userloginverify_form input[type=submit] {
+#userregisterverify_form input[type=submit] {
 	padding: 8px 18px;
 }
-#userloginverify_form .head {
+#userregisterverify_form .head {
 	font: normal 24px DefaultFont;
 }
-#userloginverify_form .info {
+#userregisterverify_form .info {
 	margin: 50px 3px 20px 0;
 	font-size: 13px;
 }
 
-#userloginverify_form input[type=text]:-moz-placeholder {
+#userregisterverify_form input[type=text]:-moz-placeholder {
     text-align: right;
     font-family: DefaultFont;
     direction: rtl;
 }
-#userloginverify_form input[type=text]:-ms-input-placeholder {
+#userregisterverify_form input[type=text]:-ms-input-placeholder {
     text-align: right;
     font-family: DefaultFont;
     direction: rtl;
 }
-#userloginverify_form input[type=text]::-webkit-input-placeholder {
+#userregisterverify_form input[type=text]::-webkit-input-placeholder {
     text-align: right;
     font-family: DefaultFont;
     direction: rtl;
 }
 
-#userloginverify_form .prompt {
+#userregisterverify_form .prompt {
 	color: #a00;
 	margin-right: 8px;
 	margin-bottom: 17px;
 }
-#userloginverify_form .prompt:before {
+#userregisterverify_form .prompt:before {
 	font-family: FontAwesome;
 	content: "\f111";
 	font-size: 9px;
