--- a/components/pgSearch/pgSearch_form.css
+++ b/components/pgSearch/pgSearch_form.css
@@ -21,7 +21,7 @@
 	position: relative; top: -1px;
 }
 .pgSearch_form input[type="submit"] {
-	background-color: #2196f3;
+	background-color: #337ab7;
 	padding: 6px 15px;
 	border-radius: 5px;
 	color: white;
