--- a/components/contact-3/contact_vw_form.css
+++ b/components/contact-3/contact_vw_form.css
@@ -54,6 +54,7 @@
 	width: 100%;
 	height: 160px;
 	border-radius: 4px !important;
+	margin-bottom: 20px;
 }
 .contact_vw_form input[type="submit"] {
 	border-radius: 4px !important;
@@ -62,6 +63,20 @@
 	margin: 20px 0 !important;
 	padding: 9px 28px !important;
 	width: auto !important;
+}
+
+.contact_vw_form .prompt {
+	position: relative; top: -18px;
+	color: #900;
+}
+.contact_vw_form .prompt:before {
+	font-family: FontAwesome;
+    content: "\f111";
+    font-size: 6px;
+    padding: 0 5px;
+    display: inline-block;
+    position: relative;
+    top: -2px;
 }
 
 @media screen and (max-width: 600px) {
@@ -119,5 +134,10 @@
 	display: inline-block;
 	direction: ltr;
 } 
+
+
+
+
+
 
 
