--- a/components/listmaker-2/listmaker_list.css
+++ b/components/listmaker-2/listmaker_list.css
@@ -12,13 +12,25 @@
     border-collapse: separate;
 }
 
-.listmaker_list_record {
-	cursor:pointer;
-	background-color:white;
-	padding:5px;
-	margin:5px;
-/*	width:100%;*/
+.listmaker_head {
+	display: inline-block;
+	margin-top: 20px;
+	margin-right: 10px;
+	font-size: 26px;
+	/* font-weight: bold; */
+	/* float: right; */
+	color: #777;
 }
+
+.listmaker_list_record {
+	background-color: white;
+	padding: 5px;
+	margin: 5px;
+}
+.listmaker_list_record.pointer {
+	cursor: pointer;
+}
+
 .listmaker_list * {
 	line-height: 1.5 !important;
 }
@@ -42,7 +54,7 @@
 	line-height: 30px !important;
 	font-size: 14px;
 }
-.listmaker_list_record:hover {
+.listmaker_list_record.pointer:hover {
 	background-color: #ffe;
 }
 .listmaker_list_record_inactive {
@@ -89,11 +101,18 @@
     margin: 2px 3px;
     float: right;
     border-radius: 5px;
-    min-width: 21px;
+    min-width: 30px;
 }
 .listmaker_list_record .tools-td a.linkToFA:hover:before {
 	opacity: 1.0;
 }
+
+.listmaker_list_record .tools-td a.linkToFA.disabled:before ,
+.listmaker_list_record .tools-td a.linkToFA.disabled:hover:before {
+	opacity: 0.1 !important;
+	cursor: default !important;
+}
+
 
 .listmaker_list_record .tools-td a.up:before ,
 .listmaker_list_record .tools-td a.down:before {
@@ -204,13 +223,14 @@
 
 .listmaker_list_search {
 	margin: 10px 0 0 0;
-	display: block;
+	display: inline-block;
 	text-align: right;
+	float: left;
 	direction: rtl;
 	position: relative; z-index: 2;
 }
 .listmaker_list_search.have_addnew_url {
-	margin-bottom: -49px;
+	/* margin-bottom: -49px; */
 }
 .listmaker_list_search input {
 	width: 140px !important;
