--- a/components/linkify-2/tallfooter_linkify.css
+++ b/components/linkify-2/tallfooter_linkify.css
@@ -10,12 +10,14 @@
 }
 
 .tallfooter .this.linkify > div.head {
-	font-size: 12px;
+	font-size: 14px;
     border-bottom: 1px solid #404040;
     font-weight: normal;
     margin-bottom: 16px;
     padding: 5px 0 10px 0;
-    color: #e6e6e6;
+    color: #656565;
+    text-shadow: 0 0 2px #000;
+    font-weight: bold;
     cursor: default;
 }
 .tallfooter .this.linkify > a {
@@ -32,7 +34,7 @@
     content: "\f060";
     font-size: 12px;
     color: #eee;
-    margin: 0 12px 0 8px;
+    margin: 0 0px 0 8px;
     transition: all 0.3s;
 }
 .tallfooter .this.linkify > a:hover {
