--- a/components/userpanel-4/userpanel_headmenu.css
+++ b/components/userpanel-4/userpanel_headmenu.css
@@ -37,7 +37,7 @@
 	display: inline-block;
 	position: absolute; top: -3px; left: 10px;
 	transition: all 0.2s;
-    box-shadow: 0px 1px 5px #000 inset;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.5) inset;
 }
 
 .userpanel_headmenu .links {
