--- a/components/linkify-2/tallfooter_linkify.css
+++ b/components/linkify-2/tallfooter_linkify.css
@@ -33,7 +33,7 @@
     font-family: FontAwesome;
     content: "\f060";
     font-size: 12px;
-    color: #eee;
+    color: #6f6f6f;
     margin: 0 0px 0 8px;
     transition: all 0.3s;
 }
