--- a/components/catcustomfield-2/catcustomfield_formload.css
+++ b/components/catcustomfield-2/catcustomfield_formload.css
@@ -1,9 +1,13 @@
 
+/*-spi-*/
+
 .catcustomfield_formload {
-	
+	background-color: #f8f8f8;
+    border-radius: 8px;
+    margin-bottom: 60px;
 }
 .catcustomfield_formload > .ccffe_thisCat {
-	margin-bottom: 15px;
+	margin-bottom: -40px; /*-spi-*/
 	padding-bottom: 10px;
 	border-radius: 0 0 8px 8px;
 	background-color: #f8f8f8;
