--- a/components/pgItem/pgItem_list_brief_this.css
+++ b/components/pgItem/pgItem_list_brief_this.css
@@ -29,6 +29,7 @@
 }
 .pgItem_list_brief_this .text .name {
 	margin: 5px 0;
+	font-size: 12px;
 }
 .pgItem_list_brief_this .text .cat {
 	color: #888;
