--- a/components/fbcomment-1/fbcomment_list.css
+++ b/components/fbcomment-1/fbcomment_list.css
@@ -23,6 +23,7 @@
 }
 .fbcomment_list div.r .useravatar a.name {
 	color: #909090;
+	font-size: 12px;
 }
 .fbcomment_list div.r div.text:before ,
 .fbcomment_list div.r div.text:after {
