--- a/components/main-3/0.cssreset.init.css
+++ b/components/main-3/0.cssreset.init.css
@@ -1,4 +1,3 @@
-
 /*index*/
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -23,7 +22,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	/* font: inherit; */
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
