--- a/components/pgItem_display/pgItem_display_related.css
+++ b/components/pgItem_display/pgItem_display_related.css
@@ -22,6 +22,7 @@
 .pgItem_display_related > a > span {
 	display: block;
 	line-height: 35px !important;
+	font-size: 12px;
 }
 
 .pgItem_display_related_link_to_all {
