--- a/components/pgItem_display/pgItem_display_userinfo.css
+++ b/components/pgItem_display/pgItem_display_userinfo.css
@@ -31,6 +31,7 @@
 .pgItem_display_userinfo .pos span {
 	max-width: 150px;
 	display: inline-block;
+	font-size: 13px;
 }
 .pgItem_display_userinfo .pos icon:before {
 	content: "\f041";
