--- a/components/ticketbox-1/ticketbox_view_post.css
+++ b/components/ticketbox-1/ticketbox_view_post.css
@@ -38,7 +38,8 @@
 	display: inline-block;
 	width: calc( 100% - 180px );
 	padding: 20px 25px;
-	font-size: 12px;
+	font-size: 14px;
+	color: #838383;
 }
 
 .ticketbox_view .post .remove {
