--- a/components/usermg-2/user_mg_view.css
+++ b/components/usermg-2/user_mg_view.css
@@ -1,10 +1,12 @@
 
 .user_mg_view_head {
-	display: inline-block;
     margin-top: 20px;
-    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 25px;
-    font-size: 26px;
-    color: #777;
 }
 
+.user_mg_view_head ,
+.user_mg_view_head a {
+	display: inline-block;
+    font-size: 26px;
+}
