--- a/components/billing-4/billing_user_payment.css
+++ b/components/billing-4/billing_user_payment.css
@@ -1,6 +1,6 @@
 
 .billing_userpanel_payment {
-	margin: 0 0 50px 0;
+	margin: 40px 100px 50px;
 }
 .billing_userpanel_payment .text {
 	transition: all 0.4s;
@@ -18,58 +18,23 @@
 	font-size: 16px;
 }
 .billing_userpanel_payment .method_list .r {
-	display: inline-block;
-	width: 40%;
+	display: block;
 	vertical-align: top;
-	margin: 0 10px;
+	margin: 15px 0 15px 30px;
+	background-color: rgba(0,0,0,0.05);
+    padding: 10px 25px;
+    border-radius: 5px;
 }
 .billing_userpanel_payment .method_list .r > * {
 	vertical-align: middle;
 	display: inline-block;
 }
 .billing_userpanel_payment .method_list .r input {
-	position: relative; top: -13px;
+	position: relative; top: -15px;
 }
 .billing_userpanel_payment .method_list .r img {
 	height: 40px;
 	position: relative; right: 8px;;
-}
-
-.billing_userpanel_payment .method_list .offline {
-	display: block;
-	width: 100%;
-	position: relative;
-	height: 50px;
-	background-color: #f4f4f4;
-	padding: 10px;
-	margin-bottom: 5px;
-	vertical-align: middle;
-	cursor: pointer;
-	border-radius: 4px;
-	margin-right: 0px !important;
-	color: #777;
-	transition: all 0.3s;
-}
-.billing_userpanel_payment .method_list .offline:hover {
-	background-color: #ddd;
-	color: #000;
-}
-.billing_userpanel_payment .method_list .offline .c1 {
-	position: absolute; right: 30px; top: 10px;
-	direction: rtl;
-}
-.billing_userpanel_payment .method_list .offline .c-container {
-	display: inline-block;
-	position: absolute; left: 14px; top: 6px;
-}
-.billing_userpanel_payment .method_list .offline span {
-	display: block;
-}
-.billing_userpanel_payment .method_list .offline .c1 {
-	font: bold 16px DefaultFont;
-}
-.billing_userpanel_payment .method_list .offline input {
-	top: 7px;
 }
 
 .billing_userpanel_payment .cost-container {
@@ -84,7 +49,6 @@
 }
 .billing_userpanel_payment .cost-container input[type=text] {
 	margin: 0 20px 0 0;
-	direction: ltr;
 	font-size: 18px;
 	padding: 5px 15px 5px 15px;
 }
@@ -104,8 +68,9 @@
 	line-height: 24px !important;
 }
 .billing_userpanel_payment .wallet_credit {
-	margin: 7px 24px 0 0;
+	margin: -5px 27px 0 0;
 	display: block;
+	font-size: 12px;
 }
 .billing_userpanel_payment .convbox {
 	padding: 30px 40px;
