--- a/components/linkify-2/linkify_simple.css
+++ b/components/linkify-2/linkify_simple.css
@@ -1,3 +1,4 @@
+/*index*/
 
 .linkify_simple {
 	padding: 0 25px;
@@ -50,4 +51,9 @@
 	color: white;
 }
 
+.linkify_simple .navmenu {
+	border-radius: 4px;
+	line-height: 1 !important;
+	display: none;
+}
 
