--- a/components/news-4/news_list.css
+++ b/components/news-4/news_list.css
@@ -1,256 +1,70 @@
+/*index*/
 
 .news_list {
-    direction: rtl;
+	margin: 0 -10px;
 }
-.news_list select {
-    margin-bottom: 15px;
-    margin-right: 10px;
+.news_list .re {
+	display: block;
+	width: 100%;
+	margin: 5px;
+	height: 390px;
+	position: relative;
+	transition: transform 0.2s;
+	vertical-align: top;
+	overflow: hidden;
 }
-.news_list_content {
-    background-color: #333;
-    color: #fff;
-    direction:rtl;
-    margin-top: 10px;
-    height: 390px;
-    position: relative;
-    top: 0;
-    -webkit-transition: all ease-in-out 0.2s;
-    transition: all ease-in-out 0.2s;
+.news_list .re:hover {
+	transform: scale( 1.02 );
 }
-.news_list_content:hover {  
-    /* box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3); */
-    /* top: -5px; */
-    transform: scale( 1.02 );
+.news_list .info {
+	height: 100%;
+	padding: 30px;
+	width: 50%;
+	display: inline-block;
+	position: relative; z-index: 1;
+	background-color: black;
 }
-.news_list_content a {
-    color: #fff;
+.news_list .cat {
+	font-size: 14px;
 }
-.news_list_text {
-    padding: 46px 40px 0;
-    display: inline-block;
-    vertical-align: top;
-    background-color:#222;
-    height: 390px;
-    width: 250px;
-    overflow-y: auto;
-    box-sizing: border-box;
+.news_list .date {
+	font-size: 14px;
+	color: white;
 }
-.news_list__cat {
-    display: block;
-    color: #10C1E1;
-    border-color: #10C1E1;
-    font-size: 14px;
+.news_list .name {
+	font-size: 22px;
+	color: rgba( 255, 255, 255, .5 );
+	margin: 20px 0;
 }
-.news_list__date {
-    font-size: 14px;
-    
+.news_list .social {
+	position: absolute;
+	bottom: 25px;
+	right: 30px;
+	z-index: 2;
 }
-.news_list_img {
-    width: calc( 100% - 250px );
-    display: inline-block;
-    vertical-align: top;
+.news_list img {
+	height: 390px;
+	position: absolute; top: 0px; left: 0px;
 }
-
-.news_list_img img {
-    width: 100%;
-    height: 390px;
+.news_list a {
+	color: white;
 }
-.news_list_tile {
-    height: 80%;
-}
-.news_list_tile p {
-    color: #878787;
-    text-shadow: 0 -1px 0 #292929;
-    font-size: 22px;
-    line-height: 1.16667;
-    font-weight: 300;
-    letter-spacing: 0em;
-    margin: 29px 0 0;
-    word-wrap: break-word;
-    max-height: 190px;
-    overflow: hidden;
-}
-.news_list .social2 {
-    height: 15%;
-    position: absolute;
-    bottom: 10px;
-    width: 200px;
-    padding-right: 30px;
-    transition: all 1s;
+.news_list .re.no_image .info {
+	width: 100%;
 }
 
-/*---------------------- noimg  ---------------------------*/
-
-.news_list .noimg {
-    background-color: #222;
-    margin-top: 10px;
-    position: relative;
-    top: 0;
-    -webkit-transition: all ease-in-out 0.2s;
-    transition: all ease-in-out 0.2s;
-    width: 100%; 
-    margin: 10px 0px 0px 0px !important;
-}
-.news_list .noimg:hover {  
-   /* box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3); */
-   /* top: -5px; */
-    transform: scale( 1.02 );
-}
-.news_list .noimg .right {
-    display:inline-block;
-    vertical-align: top;
-    width: 70%;
-    box-sizing: border-box;
-    padding: 40px 40px;
-    color: #fff;
-    font-size: 22px;
-}
-.news_list .noimg .left {
-    display: inline-block;
-    vertical-align: top;
-    width: 250px;
-    box-sizing: border-box;
-    padding: 30px 40px 70px 40px;
-    overflow: hidden;
-
-}
-.news_list .noimg .news_list__date{
-    color: #fff;
-}
-.news_list .noimg p {
-    color: #878787;
-    text-shadow: 0 -1px 0 #292929;
-}
-.news_list .social3 {
-    height: 20%;
-    position: absolute;
-    bottom: 30px;
-    width: 200px;
-    padding-right: 35px;
-    transition: all 1s;
-}
-.news_list .social3 a {
-    color: #fff;
+.news_list .re:nth-child( 3n + 2 ) ,
+.news_list .re:nth-child( 3n ) {
+	display: inline-block;
+	width: calc( 50% - 10px );
 }
 
-/*--------------------------- two_news_list----------------------*/
-
-.two_news_list {
-    width: calc( 50% - 5px ); 
-    margin: 10px 5px 0px 5px !important;
-    display: inline-block;
-    vertical-align: top;
-    box-sizing: border-box;
-    background-color: #222;
-    -webkit-transition: all ease-in-out 0.2s;
-    transition: all ease-in-out 0.2s;
-    position: relative;
+.news_list hr {
+	margin: 30px 0 25px;
 }
 
-.two_news_list.first {
-    margin-right: 0px !important;
-}
-.two_news_list.second {
-    margin-left: 0px !important;
-}
 
-.two_news_list:hover {
-    /* box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3); */
-    transform: scale( 1.02 );
-}
-.two_news_list .right {
-    display:inline-block;
-    vertical-align: top;
-    width: 50%;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-.two_news_list .left {
-    display: inline-block;
-    vertical-align: top;
-    width: 50%;
-    height: 390px;
-    box-sizing: border-box;
-    padding: 30px 40px 0 40px;
-    overflow: hidden;
-}
-.two_news_list p {
-    color: #878787;
-    text-shadow: 0 -1px 0 #292929;
-    font-size: 18px;
-    line-height: 1.16667;
-    font-weight: 300;
-    letter-spacing: 0em;
-    margin: 29px 0 0;
-    word-wrap: break-word;
-    max-height: 220px;
-    overflow: hidden;
 
-}
-.two_news_list .news_list__date {
-    color: #fff;
-}
-.social2 a {
-    color: #fff;
 
-}
-.news_list_2img {
-    display: inline-block;
-    vertical-align: top;
-    width: 50%;
-}
-.news_list_2img img {
-    height: 390px;
-    width: 245px;
-}
 
-/*-----------------------two_news_list_noimg--------------------*/
 
-.two_news_list_noimg {
-    width: calc( 50% - 5px ); 
-    display: inline-block;
-    vertical-align: top;
-    box-sizing: border-box;
-    background-color: #222;
-    margin-top: 10px;
-    position: relative;
-    top: 0;
-    -webkit-transition: all ease-in-out 0.2s;
-    transition: all ease-in-out 0.2s;
-    margin: 10px 5px 0px 5px !important;
-}
-.two_news_list_noimg.first {
-    margin-right: 0px !important;
-}
-.two_news_list_noimg.second {
-    margin-left: 0px !important; 
-}
-.two_news_list_noimg:hover {  
-    /* box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3); */
-    /* top: -5px; */
-    transform: scale( 1.02 );
-}
-.two_news_list_noimg .left {
-    display: inline-block;
-    vertical-align: top;
-    width: 90%;
-    height: 390px;
-    box-sizing: border-box;
-    padding: 30px 40px 0 40px;
-}
-.two_news_list_noimg p {
-    color: #878787;
-    text-shadow: 0 -1px 0 #292929;
-    font-size: 24px;
-    line-height: 1.16667;
-    font-weight: 300;
-    letter-spacing: 0em;
-    margin: 29px 0 0;
-    word-wrap: break-word;
-    max-height: 220px;
-    overflow: hidden;
-
-}
-.two_news_list_noimg .news_list__date {
-    color: #fff;
-}
