--- a/components/pgShop/pgShop_view.css
+++ b/components/pgShop/pgShop_view.css
@@ -32,6 +32,7 @@
 	margin: 10px auto;
 	padding: 0 10px 0 55px;
     text-align: right;
+    font-size: 12px;
 }
 .pgShop_view .re .cost {
 	position: absolute; top: 160px; left: 10px; z-index: 2;
