--- a/components/useravatar-1/useravatar.css
+++ b/components/useravatar-1/useravatar.css
@@ -8,6 +8,7 @@
 	width: 40px;
 	height: 40px;
 	border-radius: 40px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
 }
 .useravatar > div {
 	display: inline-block;
