--- a/components/userforgot-1/user_forgot_form.css
+++ b/components/userforgot-1/user_forgot_form.css
@@ -2,8 +2,7 @@
 #user_forgot_form {
 	margin: auto;
 	display: block;
-	margin-right: 8%;
-	margin-bottom: 8%;
+	margin: 0 8%;
 	padding: 0px 0 80px 0;
 }
 #user_forgot_form input[name="username"] {
@@ -11,6 +10,7 @@
     margin-bottom: 18px;
     font-size: 16px;
     width: 320px;
+    max-width: 100%;
     padding: 8px 16px;
     border: 1px solid #bbb !important;
     display: block;
