--- a/components/userregisterverify-1/userregisterverify_form.css
+++ b/components/userregisterverify-1/userregisterverify_form.css
@@ -2,15 +2,15 @@
 #userregisterverify_form {
 	margin: auto;
 	display: block;
-	margin-right: 8%;
-	margin-bottom: 8%;
-	padding: 20px 0 20px 0;
+	margin: 0 8%;
+	padding: 20px 0;
 }
 #userregisterverify_form input[type=text] {
 	font-family: monospace,'sans-serif' !important;
 	margin-bottom: 18px;
 	font-size: 16px;
 	width: 320px;
+	max-width: 100%;
 	padding: 8px 16px;
 	border: 1px solid #bbb !important;
 }
