--- a/components/userlogin-1/user_login_form.css
+++ b/components/userlogin-1/user_login_form.css
@@ -43,6 +43,7 @@
 }
 #user_login_form .forgot {
 	color: #900;
+	font-size: 12px;
 }
 #user_login_form .forgot:hover {
 	color: #d00;
@@ -55,6 +56,7 @@
 }
 #user_login_form .register_button > div {
 	margin-bottom: 20px;
+	font-size: 12px;
 }
 #user_login_form .register_button > a.btn {
 	
