--- a/components/userlogin-1/user_login_form.css
+++ b/components/userlogin-1/user_login_form.css
@@ -35,9 +35,6 @@
 #user_login_form .terms > a:hover {
 	color: #d00;
 }
-#user_login_form .prompt {
-
-}
 #user_login_form input[type=submit] {
 	margin: 10px 0;
 }
@@ -65,6 +62,7 @@
 #user_login_form .prompt {
 	color: #e00;
 	margin: 15px 10px 15px 0;
+	font-size: 12px;
 }
 #user_login_form .prompt:before {
 	font-family: FontAwesome;
