--- a/components/billing-4/billing_user_payment.css
+++ b/components/billing-4/billing_user_payment.css
@@ -2,10 +2,14 @@
 .billing_userpanel_payment {
 	margin: 40px 100px 50px;
 }
+section.center.have_right_sidebar .billing_userpanel_payment {
+	margin: 0 0 30px 0;
+}
+
 .billing_userpanel_payment .text {
 	transition: all 0.4s;
 	margin: 25px;
-	font: bold 17px DefaultFont;
+	font: bold 12px DefaultFont;
 }
 .billing_userpanel_payment .method_list {
 	display: inline-block;
@@ -15,15 +19,20 @@
 }
 .billing_userpanel_payment .method_list h1 {
 	margin: 20px 0 30px 0;
-	font-size: 16px;
+	font-size: 12px;
 }
 .billing_userpanel_payment .method_list .r {
 	display: block;
 	vertical-align: top;
-	margin: 15px 0 15px 30px;
-	background-color: rgba(0,0,0,0.05);
+	margin: 0;
     padding: 10px 25px;
     border-radius: 5px;
+	background-color: #f4f4f4;
+	color: #777;
+}
+.billing_userpanel_payment .method_list .r:hover {
+	background-color: #ddd;
+	color: #000;
 }
 .billing_userpanel_payment .method_list .r > * {
 	vertical-align: middle;
@@ -36,7 +45,9 @@
 	height: 40px;
 	position: relative; right: 8px;;
 }
-
+.billing_userpanel_payment .method_list .r label {
+	display: block;
+}
 .billing_userpanel_payment .cost-container {
 	display: inline-block;
 	width: 50%;
@@ -45,7 +56,7 @@
 .billing_userpanel_payment .cost-container span {
 	margin: 0 20px 0 0;
 	display: inline-block;
-	font: normal 14px DefaultFont;
+	font: normal 12px DefaultFont;
 }
 .billing_userpanel_payment .cost-container input[type=text] {
 	margin: 0 20px 0 0;
