--- a/components/billing_offline-4/billing_userpanel_payment_offline.css
+++ b/components/billing_offline-4/billing_userpanel_payment_offline.css
@@ -50,6 +50,46 @@
 	margin: -40px 0px;
 }
 
+.billing_userpanel_payment .method_list .offline span {
+	display: block;
+	font-size: 12px;
+}
+.billing_userpanel_payment .method_list .offline .c1 {
+	font: bold 16px DefaultFont;
+}
+.billing_userpanel_payment .method_list .offline input {
+	top: 3px;
+}
+
+
+.billing_userpanel_payment .method_list .offline {
+	display: block;
+	width: 100%;
+	position: relative;
+	height: 50px;
+	background-color: #f4f4f4;
+	padding: 10px;
+	margin-bottom: 5px;
+	vertical-align: middle;
+	cursor: pointer;
+	border-radius: 4px;
+	margin-right: 0px !important;
+	color: #777;
+	transition: all 0.3s;
+}
+.billing_userpanel_payment .method_list .offline:hover {
+	background-color: #ddd;
+	color: #000;
+}
+.billing_userpanel_payment .method_list .offline .c1 {
+	position: absolute; right: 30px; top: 11px;
+	direction: rtl;
+}
+.billing_userpanel_payment .method_list .offline .c-container {
+	display: inline-block;
+	position: absolute; left: 14px; top: 6px;
+}
+
 
 
 
