--- a/components/catcustomfield-2/catcustomfield_formload/catcustomfield_formload.css
+++ b/components/catcustomfield-2/catcustomfield_formload/catcustomfield_formload.css
@@ -1,13 +1,9 @@
 
-/*-spi-*/
-
 .catcustomfield_formload {
-	background-color: #f8f8f8;
-    border-radius: 8px;
-    margin-bottom: 60px;
+	
 }
 .catcustomfield_formload > .ccffe_thisCat {
-	margin-bottom: -40px; /*-spi-*/
+	margin-bottom: 15px;
 	padding-bottom: 10px;
 	border-radius: 0 0 8px 8px;
 	background-color: #f8f8f8;
@@ -34,6 +30,7 @@
 	vertical-align: middle;
 	padding-left: 10px;
 	color: #777;
+	font-size: 12px;
 }
 
 .catcustomfield_formload > .ccffe_thisCat div ,
@@ -133,7 +130,12 @@
 	vertical-align: top;
     margin: 0px;
     padding: 0px;
+    font-size: 13px;
 }
+.catcustomfield_formload > .ccffe_thisCat .checkbox_c > label span {
+	font-size: 12px;
+}
+
 
 
 
